tests/specs/ecosystem/mdekstrand/hyperstatic/0_5_0_beta8.test
mdekstrand/hyperstatic/0.5.0-beta8
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@b-fuze/deno-dom@^0.1.43": "jsr:@b-fuze/deno-dom@0.1.43"
    },
    "jsr": {
      "@b-fuze/deno-dom@0.1.43": {
        "integrity": "6e99c4645ab897520fa04d60d0096aa1f49ff9a8950db7f258511419ab08d754"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Node'.
 */ export const h: HyperStatic<Node, Element> = {} as never;
                                ~~~~
    at file://<tmpdir>/browser/mod.ts:5:33

TS2304 [ERROR]: Cannot find name 'Element'.
 */ export const h: HyperStatic<Node, Element> = {} as never;
                                      ~~~~~~~
    at file://<tmpdir>/browser/mod.ts:5:39

Found 2 errors.

error: Type checking failed.

